--- a/index.html
+++ b/index.html
@@ -1,71 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      /* background-color: rgba(0, 0, 0, 0.4); */
-      color: white;
-      font-size: 30px;
-      font-family: Arial, sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      overflow: hidden;
-    }
-
-
-
-    /* css */
-    .main{
-    height: 100vh;
-    width: 100vw;
-    background: transparent;
-    display: flex;
-    align-items: flex-start;
-    flex-direction: row-reverse;
-}
-.timebom{
-    /* background: red; */
-    height: 200px;
-}
-.img{
-    height: 200px;
-}
-
-.text{
-    position: absolute;
-    top: 98px;
-    right: 66px;
-    transform: translate(-50%, -50%);
-    color: rgb(255, 0, 0);
-    font-size: 25px;
-    font-weight: bold;
-    border-radius: 4px;
-    text-shadow: 2px 2px 8px rgba(0,0,0,0.7); /* glow effect */
-    /* mix-blend-mode: lighten; blends with image */
-    background: black;
-}
-.blast{
-  height: 100vh;
-  width: 100vw;
-}
-.img2{
-  height: 100vh;
-}
-.main1{
-  height: 100vh;
-  width: 100vh;
-  background: transparent;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* background: #000; */
-}
-  </style>
+  <link rel="stylesheet" href="./style.css">
   <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
